fixed CSP, meta tags and alt attr

--- a/templates/macros/macros.html
+++ b/templates/macros/macros.html
@@ -72,7 +72,7 @@
         <p id="banner-home-subtitle">{{ desc.text }}</p>
     </div>
     <div class="image-container-home">
-        <img class="banner-home-img" src="{{ desc.img }}" />
+        <img alt = "the owner" class="banner-home-img" src="{{ desc.img }}" />
     </div>
 </div>
 {% endmacro content %}
