--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,13 +37,13 @@
   --light-border-color: rgba(255, 255, 255, 0.1);
   --input-back: #4b4a4a;
   --input-color: #294797;
+  --meta-color: rgb(198, 197, 197);
 }
 
 [data-theme="light"] {
   --bg-0: #fff;
   --bg-1: #f2f2f2;
   --bg-2: #fefefe;
-  --primary-color: #ef5350;
   --hover-color: white;
   --background-color:#fff;
   --navbar-color:#e3e3e3;
@@ -55,6 +55,7 @@
   --input-color: #294797;
   --input-back: rgb(158, 158, 158);
   --input-color: #fbec48;
+  --meta-color: rgb(53, 53, 53);
 }
 
 html {
