--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% import "macros/macros.html" as post_macros %}
 
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 {% include "partials/header.html" %}
 
 <body>
