--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -60,4 +60,6 @@
     <meta property="og:description" content="{{ config.description }}">
     <meta property="og:site_name" content="{{ config.title }}">
 
+    <meta http-equiv="Content-Security-Policy" 
+    content="default-src 'self' ws://127.0.0.1:1024/; img-src 'self' https://*; script-src 'self'; style-src 'self'; font-src 'self'" />
 </head>
