feature: Add search functionality
As shown/described/instructed by Zola

Caveats:
- Commit also touches footer message, less ambiguous

Potential future TODOs:
- Not happy with search results UI/look - room for improvement
- Add a switch for this under `extra` section in config.toml?

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "parts/footer.scss";
 @import "parts/theme-switch.scss";
 @import 'syntax/syntax-ayu-dark.scss';
+@import "search";
 
 :root {
   --max-layout-width:900px;
