--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,9 +1,9 @@
 <footer>
     <section>
         <nav>
-            <span className="desktop-only">Made by 
-                <a href = "https://syedzayyan.com/" rel="noopener noreferrer" target="_blank">SZM</a> and powered by 
-                <a href = "https://getzola.org/" rel="noopener noreferrer" target="_blank">Zola</a></span>
+            <span className="desktop-only">This blog is powered by 
+                <a href = "https://getzola.org/" rel="noopener noreferrer" target="_blank">Zola</a> with theme by
+                <a href = "https://syedzayyan.com/" rel="noopener noreferrer" target="_blank">SZM</a></span>
         </nav>
     </section>
     <script src="{{ get_url(path='js/main.js', trailing_slash=false) | safe }}"/></script>
