--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,8 +11,8 @@
 @import "parts/home-banner.scss";
 @import "parts/footer.scss";
 @import "parts/theme-switch.scss";
+@import "parts/_search";
 @import 'syntax/syntax-ayu-dark.scss';
-@import "search";
 
 :root {
   --max-layout-width:900px;
