--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -18,7 +18,7 @@
         {% endif %}
 
         <nav class="socials nav-navs">
-            {%- if config.extra.socials %}
+            {%- if config.extra.search_bar %}
                 <div class="search-container">
                     <input id="search" type="search" placeholder="🔎   Search">
                     <div class="search-results">
